kube/gcp/ingress-controller.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-controller-ingress-nginx-controller
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.global-static-ip-name: web-static-ip
  name: nginx
spec:
  tls:
    - hosts:
      secretName: ntcore-demo
  defaultBackend:
    service:
      name: ingress-controller-ingress-nginx-controller
      port:
        number: 80
